--- a/style.css
+++ b/style.css
@@ -47,6 +47,24 @@ body {
 }
 
 
+/* main content */
+.main-content {
+    background-color: aquamarine; /* placeholder */
+    padding: 1.25rem;
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); */
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.project {
+    background-color: crimson; /* placeholder */
+    padding: 1.25rem;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+}
 /* side bar styling */
 
 .sidebar {
