--- a/style.css
+++ b/style.css
@@ -10,16 +10,20 @@ body {
     background-color:blanchedalmond;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    margin: 0;
+    display: grid;
+    grid-template: auto 4fr / 1fr 4fr;
 }
 
 /* header */
 .header {
-    display: grid;
-    grid-template-columns: auto 1fr;
+    /* display: flex;
     align-items: center;
-    background-color:cadetblue; /* placeholder */
-    padding: 1rem 2rem;
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); */
+    display: grid;
+    grid-template: auto 1fr / 2fr 1fr;
+    background-color:cadetblue; /*placeholder*/
+    padding: 0.5rem 2rem;
 }
 
 .header .profile img {
@@ -30,9 +34,15 @@ body {
 }
 
 .header .search-container {
-    display: flex;
+    /* display: flex;
     align-items: center;
     gap: 1rem;
+    flex: grow 1; */
+    grid-area: 1 / 1 / 2 / 2;
+    display: flex;
+    gap: 1rem;
+    /* -webkit-box-align: center; */
+    align-items: center;
 }
 
 .header .search-container label {
@@ -52,11 +62,16 @@ body {
     background-color: aquamarine; /* placeholder */
     padding: 1.25rem;
     /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); */
+    height: 85vh;
+    overflow-y: auto;
 }
 
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 2rem 1rem;
 }
 
 .project {
@@ -64,20 +79,29 @@ body {
     padding: 1.25rem;
     border: 1px solid #ccc;
     border-radius: 0.5rem;
+    display: grid;
+    grid-template: 1fr auto / 1rem 1fr;
 }
 
 
 /* side bar styling */
 .sidebar {
-    width: 32rem;
     background-color: brown; /* placeholder */
-    color: wheat;
-    padding: 1.25rem 0;
+    display: grid;
+    grid-area: 1 / 1 /-1 / 2;
+}
+
+.sidebar .logo {
+    display: flex;
+    margin-left: 0.2rem;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .sidebar-grid {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-area: 1 / 1 / -1 / 2;
+    /* grid-template-columns: 1fr; */
     grid-gap: 0.6rem;
     list-style: none;
     padding: 0;
@@ -96,46 +120,16 @@ body {
 }
 
 
-/* announcements style */
-.announcements {
-    background-color: violet; /* placeholder */
-    padding: 1.25rem;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); */
+/* announcements and trending section */
+.main-content .ann-and-trending {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
 }
 
-.announcements h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-}
-
-.ann-item {
-    margin-bottom: 2.5rem;
-}
-
-.ann-item h3 {
-    font-size: 1.25rem;
-    margin-bottom: 0.3rem;
-}
-
-.ann-item p {
-    font-size: 1rem;
-    color: #777;
-}
-
-
-/* trending style */
-.trending {
-    background-color:darkseagreen; /* placeholder */
-    padding: 1.25rem;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); */
-}
-
-.trending h2 {
-    font-size: 1.5rem; /* Use rems for font size */
-    margin-bottom: 0.6rem; /* Use rems for spacing */
-}
-
-.trending-item h3 {
-    font-size: 1.25rem; /* Use rems for font size */
-    margin-bottom: 0.3rem; /* Use rems for spacing */
+.main-content .announcements > .trending{
+    display: flex;
+    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
 }
