--- a/style.css
+++ b/style.css
@@ -86,37 +86,52 @@ body {
 
 /* side bar styling */
 .sidebar {
-    background-color: brown; /* placeholder */
     display: grid;
-    grid-area: 1 / 1 /-1 / 2;
+    grid-area: 1 / 1 / -1 / 2;
+    grid-template-rows: auto auto 1fr;
+    
+    grid-column: 1;
+    -ms-grid-column-span: 1;
+    padding: 1rem;
+    background-color: aqua; /* placeholder */
 }
 
 .sidebar .logo {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.5rem
 }
 
-.sidebar-grid {
-    display: grid;
-    grid-area: 1 / 1 / -1 / 2;
-    /* grid-template-columns: 1fr; */
-    grid-gap: 0.6rem;
-    list-style: none;
+.sidebar .logo h2 {
+    margin: 0;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.sidebar ul {
     padding: 0;
-    gap: 1rem;
 }
 
-.sidebar-grid li {
+.sidebar ul li {
+    list-style: none;
     display: flex;
+    gap: 1rem;
     align-items: center;
 }
 
-.sidebar-grid img {
-    width: 2rem;
-    height: 2rem;
-    margin-right: 0.6rem;
+/* .sidebar ul li img:hover ~ p {
+    border-bottom: 2px solid white; 
+} */
+
+.sidebar ul li p {
+    cursor: pointer;
+    border: 0.6rem solid transparent;
+    /* font weight and all the shebang */
 }
+
+/* .sidebar ul li p:hover {
+    border-bottom: 2px solid white; 
+} */
 
 
 /* announcements and trending section */
