--- a/style.css
+++ b/style.css
@@ -57,33 +57,6 @@ body {
 }
 
 
-/* main content */
-.main-content {
-    background-color: aquamarine; /* placeholder */
-    padding: 1.25rem;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); */
-    height: 85vh;
-    overflow-y: auto;
-}
-
-.projects-grid {
-    display: grid;
-    grid-template-rows: auto 1fr 1fr;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: 1fr;
-    gap: 2rem 1rem;
-}
-
-.project {
-    background-color: crimson; /* placeholder */
-    padding: 1.25rem;
-    border: 1px solid #ccc;
-    border-radius: 0.5rem;
-    display: grid;
-    grid-template: 1fr auto / 1rem 1fr;
-}
-
-
 /* side bar styling */
 .sidebar {
     display: grid;
@@ -133,6 +106,49 @@ body {
     border-bottom: 2px solid white; 
 } */
 
+
+/* main content */
+.main-content {
+    background-color: coral;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    padding: 1rem 2rem;
+    gap: 1.5rem;
+}
+
+.main-content .projects-div {
+    background-color: aquamarine;
+    display: grid;
+    /* grid-template-rows: auto 1fr 1fr; */
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 2rem 1rem;
+}
+
+.main-content .projects-div > h2 {
+    font-size: 2rem;
+    grid-column: 1 / -1;
+    margin: 0;
+}
+
+.main-content .projects-div .project {
+    background: violet;
+    display: grid;
+    grid-template: 1fr auto / 1rem 1fr;
+
+    border-radius: 1rem;
+}
+
+.main-content .projects-div .project .project-text {
+    padding: 1rem 1rem 0;
+
+}
+
+.main-content .projects-div .project .project-text .title{
+    margin: 0;
+    font-size: 1.5rem;
+
+}
 
 /* announcements and trending section */
 .main-content .ann-and-trending {
