--- a/style.css
+++ b/style.css
@@ -17,43 +17,35 @@ body {
 
 /* header */
 .header {
-    /* display: flex;
-    align-items: center;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); */
+    background-color: brown;
+
     display: grid;
-    grid-template: auto 1fr / 2fr 1fr;
-    background-color:cadetblue; /*placeholder*/
+    grid-template-rows: auto 1fr / 2fr 1fr;
     padding: 0.5rem 2rem;
 }
 
-.header .profile img {
-    width: 1.8rem;
-    height: 1.8 rem;
-    border-radius: 50%;
-    margin-right: 1rem;
-}
-
-.header .search-container {
-    /* display: flex;
-    align-items: center;
-    gap: 1rem;
-    flex: grow 1; */
-    grid-area: 1 / 1 / 2 / 2;
+.search-container {
     display: flex;
+    grid-area: 1 / 1 / 2 / 2;
     gap: 1rem;
-    /* -webkit-box-align: center; */
     align-items: center;
 }
 
-.header .search-container label {
-    margin-right: 1rem;
+.search-container img {
+    height: 2.5rem;
+    width: 2.5rem;
 }
 
-.header .search-input {
-    border: 1px solid blue; /* placeholder */
-    padding: 0.3rem 0.6rem;
-    border-radius: 0.3rem;
-    outline: none;
+.search-container .search-input {
+    flex: 1;
+    border-radius: 0.4rem;
+    border: none;
+    height: 1rem;
+}
+
+
+.search-container .search-input:focus {
+    border: none;
 }
 
 
