--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body, h1, h2, h {
 
 /* placeholder background color and base font */
 body {
-    background-color:blanchedalmond;
+    background-color:beige;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     margin: 0;
@@ -17,7 +17,7 @@ body {
 
 /* header */
 .header {
-    background-color: brown;
+    background-color: #191C24;
 
     display: grid;
     grid-template-rows: auto 1fr / 2fr 1fr;
@@ -49,7 +49,7 @@ body {
 }
 
 .profile-container {
-    background-color: hotpink;
+    background-color: #191C24;
 
     display: flex;
     grid-area: 1 / 2 / 2 / 3;
@@ -66,22 +66,39 @@ body {
 .profile-container .profile-img {
     height: 1.5rem;
     cursor: pointer;
+    border-radius: 0.5rem;
 }
 
-.main-profile-container{
-    display: grid;
+.profile-container .username {
+    color: beige;
+}
+
+.main-profile-container {
+    /* display: grid;
     grid-template: 1fr 1fr / auto 1fr;
-    gap: 0.5rem 1rem;
+    gap: 0.5rem 1rem; */
+    display: grid;
+    grid-template: auto;
+    gap: 0.6rem;
+}
+
+.main-profile-container .main-profile-img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 1rem;
 }
 
 .main-profile-container .welcome-text {
     margin: 0;
     align-self: flex-end;
+    color: beige;
 }
 
 .main-profile-container .main-user-name {
     margin: 0;
     align-self: flex-start;
+    color: beige;
+    font-weight: bold;
 }
 
 .buttons-container {
@@ -94,6 +111,12 @@ body {
 .buttons-container button {
     cursor: pointer;
     /* customize buttons here (font, size, radius etc)*/
+    border-radius: 0.4rem;
+    background-color: beige;
+    color:#191C24;
+    width: 5rem;
+    height: 3rem;
+    font-weight: bolder;
 }
 
 
