--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* reset default styles for consistency */
-body, h1, h2, h {
+body, h1, h2 {
     margin: 0;
     padding: 0;
 }
@@ -17,7 +17,7 @@ body {
 
 /* header */
 .header {
-    background-color: #191C24;
+    background-color: #454850;
 
     display: grid;
     grid-template-rows: auto 1fr / 2fr 1fr;
@@ -49,7 +49,7 @@ body {
 }
 
 .profile-container {
-    background-color: #191C24;
+    background-color: #454850;
 
     display: flex;
     grid-area: 1 / 2 / 2 / 3;
@@ -179,7 +179,7 @@ body {
 
 /* main content */
 .main-content {
-    background-color: coral;
+    background-color: #454850;
     display: grid;
     grid-template-columns: 3fr 1fr;
     padding: 1rem 2rem;
@@ -189,7 +189,7 @@ body {
 .main-content .projects-div {
     background-color: aquamarine;
     display: grid;
-    /* grid-template-rows: auto 1fr 1fr; */
+    grid-template-rows: auto 1fr 1fr;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: 1fr;
     gap: 2rem 1rem;
@@ -202,7 +202,7 @@ body {
 }
 
 .main-content .projects-div .project {
-    background: violet;
+    background: #454850;
     display: grid;
     grid-template: 1fr auto / 1rem 1fr;
 
