--- a/style.css
+++ b/style.css
@@ -249,6 +249,7 @@ body {
 
     border-radius: 2rem;
     padding: 1rem 2rem;
+    margin-top: 1.8rem;
 }
 
 .main-content .ann-and-trending .ann-item h3,
