--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ body {
 
 .main-content .projects-div .project {
     background: #454850;
-    display: grid;
+    /* display: grid; */
     grid-template: 1fr auto / 1rem 1fr;
 
     border-radius: 1rem;
@@ -211,7 +211,7 @@ body {
 
 .main-content .projects-div .project .project-text {
     padding: 1rem 1rem 0;
-
+    color: beige;
 }
 
 .main-content .projects-div .project .project-text .title{
